<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_chongzhi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yztc.lovetv.activity.mine.ChongzhiActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_chongzhi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="充值"
        app:titleMarginStart="@dimen/dp_108"
        android:background="@color/colorWhite"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:background="@color/px_background"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/background"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:background="@color/px_background"/>

    <!--账户余额-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/colorWhite">
        <TextView
            android:id="@+id/tv_coinyue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:text="@string/coinyue"/>

        <ImageView
            android:id="@+id/iv_coin"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_5"
            android:src="@mipmap/new_coin"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_coinyue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:layout_toRightOf="@id/iv_coin"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:background="@color/px_background"/>

    <!--选择充值金额-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/background"
        android:text="@string/choosecoin"
        android:gravity="center_vertical"
        android:textColor="@color/colorfont"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:background="@color/px_background"/>

    <!--100,10元-->
    <RelativeLayout
        android:id="@+id/rl_tenYan"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/colorWhite"
        android:addStatesFromChildren="true">

        <ImageView
            android:id="@+id/iv_coin_100"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_centerVertical="true"
            android:src="@mipmap/new_coin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oneHundred"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_coin_100"/>

        <TextView
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_20"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/tenYuan"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/sp_12"
            android:background="@drawable/money_bg"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:background="@color/px_background"/>

    <!--250,25元-->
    <RelativeLayout
        android:id="@+id/rl_twentyfiveYan"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/colorWhite"
        android:addStatesFromChildren="true">

        <ImageView
            android:id="@+id/iv_coin_250"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_centerVertical="true"
            android:src="@mipmap/new_coin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twoHundredFifty"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_coin_250"/>

        <TextView
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:text="@string/ershiwuYuan"
            android:textColor="@color/colorRed"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textSize="@dimen/sp_12"
            android:background="@drawable/money_bg"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:background="@color/px_background"/>

    <!--500,50元-->
    <RelativeLayout
        android:id="@+id/rl_fiftyYan"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/colorWhite"
        android:addStatesFromChildren="true">

        <ImageView
            android:id="@+id/iv_coin_500"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_centerVertical="true"
            android:src="@mipmap/new_coin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiveHundred"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_coin_500"/>

        <TextView
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_20"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/wushiYuan"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/sp_12"
            android:background="@drawable/money_bg"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:background="@color/px_background"/>

    <!--1,000,100元-->
    <RelativeLayout
        android:id="@+id/rl_yibaiYan"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/colorWhite"
        android:addStatesFromChildren="true">

        <ImageView
            android:id="@+id/iv_coin_1000"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_centerVertical="true"
            android:src="@mipmap/new_coin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oneThousand"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_coin_1000"/>

        <TextView
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_20"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/yibaiYuan"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/sp_12"
            android:background="@drawable/money_bg"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:background="@color/px_background"/>

    <!--5,000,500元-->
    <RelativeLayout
        android:id="@+id/rl_wubaiYan"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/colorWhite"
        android:addStatesFromChildren="true">

        <ImageView
            android:id="@+id/iv_coin_5000"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_centerVertical="true"
            android:src="@mipmap/new_coin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiveThousand"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_coin_5000"/>

        <TextView
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_20"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/wubaiYuan"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/sp_12"
            android:background="@drawable/money_bg"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:background="@color/px_background"/>

    <!--10,000,1000元-->
    <RelativeLayout
        android:id="@+id/rl_yiqianYan"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/colorWhite"
        android:addStatesFromChildren="true">

        <ImageView
            android:id="@+id/iv_coin_10000"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_centerVertical="true"
            android:src="@mipmap/new_coin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenThousand"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_coin_10000"/>

        <TextView
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_20"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/yiqianYuan"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/sp_12"
            android:background="@drawable/money_bg"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:background="@color/px_background"/>

    <!--100,000,1000元-->
    <RelativeLayout
        android:id="@+id/rl_yiwanYan"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/colorWhite"
        android:addStatesFromChildren="true">

        <ImageView
            android:id="@+id/iv_coin_100000"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_centerVertical="true"
            android:src="@mipmap/new_coin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shiWan"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_coin_100000"/>

        <TextView
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_20"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/yiwanYuan"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/sp_12"
            android:background="@drawable/money_bg"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:background="@color/px_background"/>

    <!--提示：充值成功会在10分钟内到账-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:gravity="center_vertical"
        android:background="@color/background"
        android:text="@string/tishichongzhi"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/colorfont"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp_40"
            android:layout_alignParentBottom="true"
            android:textColor="@color/questionchooseBlue"
            android:text="@string/questionchoose"
            android:textSize="@dimen/sp_12"/>
    </RelativeLayout>
</LinearLayout>
